# sudo-plugin-cookie

./: CMakeLists.txt  LICENSE  README.md
src/: env.c  env.h  path.c  path.h  sudo-plugin-cookie.c
